--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
   "require": {
     "pcfreak30/composepress": "^0.2.0",
     "level-2/dice": "dev-v2.0-PHP5.4-5.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "": "lib/"
+    }
   }
 }
