*Update composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     }
   ],
   "require": {
-    "pcfreak30/composepress": "^0.2.0",
+    "composepress/core": "*",
     "level-2/dice": "dev-v2.0-PHP5.4-5.5"
   },
   "autoload": {
