--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   ],
   "require": {
     "composepress/core": "*",
+    "composepress/settings": "*",
     "level-2/dice": "dev-v2.0-PHP5.4-5.5"
   },
   "autoload": {
